# machine-learning-experiments

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/experiment/00-test/: Test.cpp  Test.h
src/framework/: Experiment.cpp  Experiment.h  Framework.cpp  Framework.h  Utils.h
src/framework/engine/: NeuronalNetwork.cpp  NeuronalNetwork.h  constants.h
src/framework/engine/world/: Genome.cpp  Genome.h  World.cpp  World.h  WorldItem.cpp  WorldItem.h
src/framework/engine/world/world_items/: Being.cpp  Being.h
src/framework/engine/world/world_items/NeuronalNetwork/: Gene.cpp  Gene.h  Genome.cpp  Genome.h  Neuron.cpp  Neuron.h  NeuronalNetwork.cpp  NeuronalNetwork.h
